tests/experimental/error/test_homeomorphic_exn_tuples.lus
type t = [int, int, int];

node n2 (x, y: t) returns (z: [int, int, int]);
let
z = x + y; -- this should fail
tel.